Moving example to basic demo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="scrollDiv" id="scrollDiv9">Div9</div>
     <div class="scrollDiv" id="scrollDiv10">Div10</div>
 
-    <script src="../index.js"></script>
+    <script src="/index.js"></script>
     <script>
       var smoothScroll = window.smoothScroll;
       var numberOfElements = 10;
