--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">SimpleSmoothScroll</a>
-                <ul class="right">
+                <ul class="right hide-on-med-and-down">
                     <li><a href="https://github.com/jljorgenson18/simplesmoothscroll">Github</a></li>
                     <li><a href="https://www.npmjs.com/package/simplesmoothscroll">Npm</a></li>
                 </ul>
@@ -91,13 +91,11 @@ smoothScroll(myElement, {
 
             <div class="card finalCard teal lighten-3" id='finalSection'>
                 <div class="card-content">
-                    <h3>Thank you for checking out SimpleSmoothScroll!</h3>
-                    <div class="collection">
-                        <a href="https://github.com/jljorgenson18/simplesmoothscroll" class="collection-item">Github</a>
-                        <a href="https://www.npmjs.com/package/simplesmoothscroll" class="collection-item">Npm</a>
-                    </div>
+                    <h5>Thank you for checking out SimpleSmoothScroll!</h5>
+                    <a href="https://github.com/jljorgenson18/simplesmoothscroll" class="collection-item">Github</a>
+                    <br />
+                    <a href="https://www.npmjs.com/package/simplesmoothscroll" class="collection-item">Npm</a>
                 </div>
-
             </div>
         </div>
         <footer class='page-footer grey darken-3'>
